<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.104"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="Email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:background="@drawable/roundedbutton"
        android:fontFamily="sans-serif-medium"
        android:text="Login"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        tools:text="Login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="121dp"
        android:layout_marginTop="132dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="The Book Store"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

</androidx.constraintlayout.widget.ConstraintLayout>