<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Home"
        android:textSize="30dp"
        android:gravity="center"/>
    <SearchView
        android:id="@+id/searchViewBar"
        android:layout_marginTop="40dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search Here" >

        <requestFocus />
    </SearchView>
    
    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="#ad5"
        android:dividerHeight="2dp" />
    
    <GridView
        android:id="@+id/gridviewBuyPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:layout_marginTop="80dp"
        android:numColumns="2"
        android:scaleX="1.0"
        android:scaleY="1.0"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="24dp" />
</FrameLayout >